packages/typ/tests/fixtures/diagnostics/0269_fun_locally_abstract_mismatch_03.ml
let bad_gamma (type a) (x : a) : int = x
